--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
-</html>
 <!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
 <meta name="viewport"
-      content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <title>TAME Video Chat</title>
 
 <style>
-* { box-sizing: border-box; margin: 0; padding: 0; }
 body {
+    margin: 0;
     background: #000;
     color: #fff;
     font-family: Arial, sans-serif;
@@ -21,12 +20,6 @@ body {
     padding: 10px;
     text-align: center;
     background: #111;
-    font-size: 14px;
-}
-#roomInfo {
-    font-size: 11px;
-    text-align: center;
-    opacity: .7;
 }
 #videos {
     flex: 1;
@@ -34,54 +27,43 @@ body {
     justify-content: center;
     align-items: center;
     gap: 8px;
-    padding: 8px;
 }
 video {
     width: 48%;
-    max-width: 420px;
+    max-width: 400px;
     background: #111;
     border-radius: 12px;
     object-fit: cover;
 }
-.local {
-    transform: scaleX(-1);
-    border: 2px solid #4CAF50;
-}
-.remote {
-    border: 2px solid #2196F3;
-}
+.local { transform: scaleX(-1); border: 2px solid #4CAF50; }
+.remote { border: 2px solid #2196F3; }
 #controls {
+    padding: 10px;
     display: flex;
     justify-content: center;
-    gap: 8px;
-    padding: 12px;
-    background: rgba(0,0,0,.8);
+    gap: 10px;
 }
 button {
     padding: 10px 18px;
-    border-radius: 25px;
+    border-radius: 30px;
     border: none;
     cursor: pointer;
-    font-size: 14px;
 }
 #permissionModal {
     position: fixed;
     inset: 0;
     background: rgba(0,0,0,.9);
     display: flex;
-    justify-content: center;
     align-items: center;
-    z-index: 1000;
+    justify-content: center;
+    z-index: 999;
 }
 .modal {
     background: #222;
     padding: 25px;
     border-radius: 15px;
     text-align: center;
-    width: 90%;
-    max-width: 360px;
 }
-.modal h3 { margin-bottom: 10px; color: #4CAF50; }
 .modal button {
     background: #4CAF50;
     color: #fff;
@@ -95,13 +77,12 @@ button {
 <div id="permissionModal">
     <div class="modal">
         <h3>Camera & Microphone</h3>
-        <p>Tap allow to start video call</p>
+        <p>Tap Allow to start</p>
         <button id="allowBtn">Allow</button>
     </div>
 </div>
 
 <div id="status">Waiting for permission…</div>
-<div id="roomInfo">Room: -</div>
 
 <div id="videos">
     <video id="localVideo" autoplay muted playsinline class="local"></video>
@@ -115,10 +96,6 @@ button {
 </div>
 
 <script type="module">
-/* =====================================================
-   TELEGRAM + LOW BANDWIDTH SAFE LIVEKIT FRONTEND
-   ===================================================== */
-
 import {
     Room,
     RoomEvent,
@@ -128,33 +105,44 @@ import {
 const LIVEKIT_URL = "wss://video-20qatdd3.livekit.cloud";
 
 let room;
-let micEnabled = true;
-let camEnabled = true;
+let micOn = true;
+let camOn = true;
 
 const statusEl = document.getElementById("status");
-const roomInfo = document.getElementById("roomInfo");
+const modal = document.getElementById("permissionModal");
 const localVideo = document.getElementById("localVideo");
 const remoteVideo = document.getElementById("remoteVideo");
-const modal = document.getElementById("permissionModal");
 
-/* -------- Telegram WebApp safety -------- */
 if (window.Telegram?.WebApp) {
     Telegram.WebApp.expand();
-    Telegram.WebApp.disableClosingConfirmation();
 }
 
-/* -------- Token from URL -------- */
+/* -------- TOKEN -------- */
 function getToken() {
     return new URLSearchParams(location.search).get("token");
 }
 
-/* -------- Permission button -------- */
+/* -------- ALLOW BUTTON (CRITICAL FIX) -------- */
 document.getElementById("allowBtn").onclick = async () => {
-    modal.style.display = "none";
-    await startCall();
+    try {
+        // MUST be inside click
+        const tempStream = await navigator.mediaDevices.getUserMedia({
+            audio: true,
+            video: true
+        });
+
+        // Permission granted — stop temp tracks
+        tempStream.getTracks().forEach(t => t.stop());
+
+        modal.style.display = "none";
+        await startCall();
+
+    } catch (e) {
+        statusEl.textContent = "Permission denied";
+    }
 };
 
-/* -------- Core connection logic -------- */
+/* -------- CONNECT -------- */
 async function startCall() {
     const token = getToken();
     if (!token) {
@@ -167,7 +155,6 @@ async function startCall() {
     room = new Room({
         adaptiveStream: true,
         dynacast: true,
-        stopLocalTrackOnUnpublish: true,
         publishDefaults: {
             videoSimulcastLayers: [VideoPresets.h180],
             videoCodec: "vp8"
@@ -175,9 +162,7 @@ async function startCall() {
     });
 
     room.on(RoomEvent.TrackSubscribed, track => {
-        if (track.kind === "video") {
-            track.attach(remoteVideo);
-        }
+        if (track.kind === "video") track.attach(remoteVideo);
         if (track.kind === "audio") {
             const audio = document.createElement("audio");
             audio.autoplay = true;
@@ -185,19 +170,15 @@ async function startCall() {
         }
     });
 
-    room.on(RoomEvent.TrackUnsubscribed, track => track.detach());
-
-    room.on(RoomEvent.ConnectionStateChanged, state => {
-        if (state === "connected") statusEl.textContent = "Connected";
-        if (state === "reconnecting") statusEl.textContent = "Reconnecting…";
-        if (state === "disconnected") statusEl.textContent = "Disconnected";
+    room.on(RoomEvent.ConnectionStateChanged, s => {
+        statusEl.textContent =
+            s === "connected" ? "Connected" :
+            s === "reconnecting" ? "Reconnecting…" :
+            "Disconnected";
     });
 
     await room.connect(LIVEKIT_URL, token);
 
-    roomInfo.textContent = `Room: ${room.name}`;
-
-    /* LOW BANDWIDTH SAFE */
     await room.localParticipant.setCameraEnabled(true, {
         resolution: { width: 320, height: 240 },
         frameRate: 12
@@ -205,31 +186,27 @@ async function startCall() {
 
     await room.localParticipant.setMicrophoneEnabled(true);
 
-    room.localParticipant.videoTracks.forEach(pub => {
-        pub.track.attach(localVideo);
+    room.localParticipant.videoTracks.forEach(p => {
+        p.track.attach(localVideo);
     });
 }
 
-/* -------- Controls -------- */
+/* -------- CONTROLS -------- */
 document.getElementById("micBtn").onclick = async () => {
-    micEnabled = !micEnabled;
-    await room.localParticipant.setMicrophoneEnabled(micEnabled);
-    document.getElementById("micBtn").textContent =
-        micEnabled ? "Mute" : "Unmute";
+    micOn = !micOn;
+    await room.localParticipant.setMicrophoneEnabled(micOn);
 };
 
 document.getElementById("camBtn").onclick = async () => {
-    camEnabled = !camEnabled;
-    await room.localParticipant.setCameraEnabled(camEnabled);
-    document.getElementById("camBtn").textContent =
-        camEnabled ? "Video" : "Video Off";
+    camOn = !camOn;
+    await room.localParticipant.setCameraEnabled(camOn);
 };
 
-/* -------- Leave -------- */
 window.leaveCall = () => {
     room?.disconnect();
-    if (window.Telegram?.WebApp) Telegram.WebApp.close();
-    else location.href = "about:blank";
+    window.Telegram?.WebApp
+        ? Telegram.WebApp.close()
+        : location.href = "about:blank";
 };
 </script>
 
